--- a/market-report.html
+++ b/market-report.html
@@ -5,6 +5,14 @@
 	<title>Exceptional Realty Group - Luxury Homes - Market Report</title>
 </head>
 <body>
+	<nav>
+		<a href="index.html">About</a>
+		<a href="new-properties.html">New Properties</a>
+		<a href="real-estate-listings.html">Listings</a>
+		<a href="market-report.html">Market Report</a>
+		<a href="contact.html">Contact</a>
+		<a href="http://hud.gov" target='_blank'>H.U.D.</a>
+	</nav>
 	<h1>Header 1</h1>
 	<h2>Header 2</h2>
 	<h3>Header 3</h3>
