--- a/contact.html
+++ b/contact.html
@@ -21,5 +21,18 @@
 	<h3>Contact</h3>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193746.90108265742!2d-74.08508315057632!3d40.64541987799189!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24416947c2109%3A0x82765c7404007886!2sBrooklyn%2C+NY%2C+USA!5e0!3m2!1sen!2sit!4v1537727983500" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 
+	<!-- Contact Form -->
+	<form action="#" method="post">
+	  <label for="fullname">Name</label>
+	  <input type="text" id="fullname" name="fullname" placeholder="your name" required>
+	  <label for="email">Email</label>
+	  <input type="email" id="email" name="email" placeholder="your email" required>
+	  <label for="phone">Phone</label>
+	  <input type="tel" id="phone" name="phone" placeholder="your phone (optional)">
+	  <label for="message">Message</label>
+	  <textarea id="message" name="message" rows="10"></textarea>
+	  <input type="submit" value="send">
+</form>
+
 </body>
 </html>
